--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<head>
+  <title>Maupin Motor Works</title>
+</head>
 <html>
 <body>
 <h1>Maupin Motor Works</h1>
-<p>Our Vision is to bring trust and stoke to the experience of buying a vintage European adventure vehicle!. - Coming Summer 2021</p>
+  <p>Our Vision is to bring <strong>trust and stoke</strong> to the experience of buying a <strong>vintage European adventure vehicle</strong>! 
+    <br/>
+    - Coming Summer 2021</p>
 </body>
 </html>
