--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h1>Maupin Motor Works</h1>
   <p>Our Vision is to bring <strong>trust and stoke</strong> to the experience of buying a <strong>vintage European adventure vehicle</strong>! 
     <br/>
-    - Coming Summer 2021</p>
+    <br/>
+    Coming Summer 2021 maupinmotorworks@gmail.com</p>
 </body>
 </html>
