--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <html>
 <body>
 <h1>Maupin Motor Works</h1>
-  <p>Our Vision is to bring <strong>trust and stoke</strong> to the experience of buying a <strong>vintage European adventure vehicle</strong>! 
+  <p>Our Vision: Bring <strong>Trust and Stoke</strong> to the <strong>Vintage European Adventure Vehicle</strong> buying experience! 
     <br/>
     <br/>
-    Coming Summer 2021 maupinmotorworks@gmail.com</p>
+    Coming Summer 2021
+    <br/>
+    <br/>
+    <small>maupinmotorworks@gmail.com</small>
+  </p>
 </body>
 </html>
