--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <br/>
     <small>maupinmotorworks@gmail.com</small>
   </p>
+  <p>
+    <img src="maupin-motor-works-shop.jpg"/>
+  </p>
 </body>
 </html>
