--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <small>maupinmotorworks@gmail.com</small>
   </p>
   <p>
-    <img src="maupin-motor-works-shop.jpg" width=100/>
+    <img src="maupin-motor-works-shop.jpg" width="300"/>
   </p>
 </body>
 </html>
