--- a/links.html
+++ b/links.html
@@ -65,7 +65,7 @@
           </li>
         
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#contacts">Contacts</a>
+            <a class="nav-link js-scroll-trigger" href="/#contacts">Contact</a>
           </li>
         
       </ul>
