--- a/links.html
+++ b/links.html
@@ -40,6 +40,15 @@
 {"url":"http://0.0.0.0:4000/links.html","@type":"WebPage","author":{"@type":"Person","name":"Copyright &copy; 2021"},"headline":"Links","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSG8GQBEZF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MSG8GQBEZF');
+</script>
 </head>
 
 <body id="page-top" class="">
